# serializer version: 1
# name: test_plot_snapshot_log_scale_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Cumulative Returns',
        'Drawdowns',
        'Monthly Returns',
      ]),
      'title': 'AAPL vs META vs SPY -- Benchmark Performance Dashboard',
    }),
    'num_traces': 9,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_plot_snapshot_single_symbol_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Cumulative Returns',
        'Drawdowns',
        'Monthly Returns',
      ]),
      'title': 'Meta Performance Dashboard',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'Meta',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Meta',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Meta',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_plot_snapshot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Cumulative Returns',
        'Drawdowns',
        'Monthly Returns',
      ]),
      'title': 'AAPL vs META vs SPY -- Benchmark Performance Dashboard',
    }),
    'num_traces': 9,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
